<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="">
    <string name="app_name">Hof University</string>
    <string name="DEFAULT_NOTIFICATION_CHANNEL_ID" translatable="false">notification_channel_schedule_changes</string>
    <string name="contributors" translatable="false">
                               - Lukas Mahr (1. Version)\n
                               - Lars Gaidzik (1. Version)\n
                               - Peter Rill (Schnittstellen)\n
                               - Victor Dienstbier (Schnittstellen)\n
                               - Michael Stepping (DER Aufpasser)\n
                               - Theresa Vogel (CI)\n
                               - Daniel Glaser\n
                               - Jonas Beetz\n
                               - Christian Pfeiffer (Material Design)\n
                               - Angelina Scheler (Maps)\n
                               - Bastian Kusserow (GDrive Sync)\n
                               - Maxi Sonntag (GDrive Sync)\n
                               - Johannes Franz (Chat)\n
                               - Normen Krug (Chat)\n
                               - Marcel Hagmann\n
                               - Phillipp Knoblauch\n
                               - Patrick Niepel (Onboarding)\n
                               - Phillipp Dümleim (Onboarding)\n
                               - Jan Gaida (Widget)\n
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notenbekanntgabe">Mark announcement</string>
    <string name="notenblatt">Mark sheet</string>
    <string name="raumsuche">Room search</string>
    <string name="primuss">Primuss Service</string>
    <string name="einstellungen">Settings</string>
    <string name="stundenplan">Schedule</string>
    <string name="speiseplan">Menu plan</string>
    <string name="loginFailed">Login failed!</string>
    <string name="from">From:</string>
    <string name="date">Date:</string>
    <string name="edvraum">Computer room</string>
    <string name="search">Search</string>
    <string name="mensa">Canteen</string>
    <string name="hauptgerichte">Main course</string>
    <string name="beilagen">Side dishes</string>
    <string name="desserts">Desserts</string>
    <string name="salat">Salad</string>
    <string name="pasta">Pasta</string>
    <string name="tariff">Tariff</string>
    <string name="keineraeume">No free rooms found</string>
    <string name="lesenotenblattfehler">An error occurred while loading the mark sheet.</string>
    <string name="lesenotenbekanntgabefehler">An error occurred in the Mark Announcement sheet</string>
    <string name="raumsuchefehler">An error occurred in the room search.</string>
    <string name="language">en</string>
    <string name="addToMySchedule">Add</string>
    <string name="deleteFromMySchedule">Delete</string>
    <string name="myScheduleInfo">Press an entry long time to add it to My Schedule.</string>
    <string name="experimental">Experimental</string>
    <string name="studiengang">Degree program</string>
    <string name="studium">Study</string>
    <string name="semester">Semester</string>
    <string name="noSemesterSelected">No semester chosen!</string>
    <string name="aenderung">Schedule changes</string>
    <string name="timeFrom">Start time</string>
    <string name="timeTo">Ending time</string>
    <string name="action_refresh">Update</string>
    <string name="onclick_refresh">Study courses are updated ....</string>
    <string name="myschedule">My Schedule</string>
    <string name="SHOW_PASSWORD">Display password</string>
    <string name="USERNAME">Username</string>
    <string name="PASSWORD">Password</string>
    <string name="LOGIN_DIALOG">Hochschule Hof Login</string>
    <string name="DRIVE_SYNC">Google Drive synchronization</string>
    <string name="SAVE_PASSWORD">Save password</string>
    <string name="impressum">Imprint</string>
    <string name="term_time">Study term</string>
    <string name="noTermTimeSelected">No study term selected!</string>
    <string name="aboutus">About us</string>
    <string name="datenschutz">Privacy policy</string>
    <string name="experimental_features">Experimental features</string>
    <string name="enableExperimentalSure">Experimental features may cause the app to crash. Use at your own risk! Passwords are saved in clear text!</string>
    <string name="gewaehrAusschluss">For the correctness of the provided data no responsibility is taken. Please contact for reliable information to the official body or institution.</string>
    <string name="danksagung">Hof University says thank you to the following contributors in the creation of the app for Android as well the preparatory work in web service, layout, design and consultance:</string>
    <string name="noCourseSelected">No course of studies selected!</string>
    <string name="to">To:</string>
    <string name="doubleBackOnClose">To close press back twice</string>
    <string name="noChanges">There are no changes</string>
    <string name="refreshFailed">Refresh failed</string>
    <string name="action_add_all">Add all</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_refresh_from_GDrive" translatable="false">Refresh from GDrive</string>
    <string name="added">Added</string>
    <string name="deleted">Deleted</string>
    <string name="details">Details</string>
    <string name="changesMyScheduleText">Schedule changes are based on \"My Schedule\"</string>
    <string name="changesScheduleText">\"My Schedule\" is empty. All schedule changes are shown.</string>
    <string name="noMeal">There is no new menu!</string>
    <string name="needPermissionText">You need to allow access to location for this function</string>
    <string name="needPermissionTitle">Permission required</string>
    <string name="notifications">Notifications (Push)</string>
    <string name="changes">Notify for changes</string>
    <string name="noScheduleText">For your selected settings is no schedule available.</string>
    <string name="myposition">Where am I?</string>
    <string name="where_am_i">Where am I?</string>
    <string name="address">Address:</string>
    <string name="no_address">Could not find address</string>
    <string name="feedbackBtn">Give feedback</string>
    <string name="feedbackSubject">Feedback</string>
    <string name="noEmailApp">No e-mail app installed</string>
    <string name="noBrowserApp">No browser App installed</string>
    <string name="rateThisAppBtn">Rate this App</string>
    <string name="experimental_features_infotext">Experimental features can be enabled in the settings.</string>
    <string name="notifications_infotext">You receive now notifications for changes according.</string>
    <string name="disabled_shortcut">The shortcut is disabled.</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="notifications_question">Do you want to get notifications for your changed lectures?</string>
    <string name="lastUpdated">Last updated</string>
    <string name="calendar_synchronization">Calendar synchronization</string>
    <string name="changeCancelled">[Cancelled]</string>
    <string name="changeMoved">[Moved]</string>
    <string name="changeRoomchange">[Roomchange]</string>
    <string name="changeNew">[New]</string>
    <string name="changeNewDate">New date</string>
    <string name="noLocation">No Location</string>
    <string name="calendar_synchronitation_ownLocalCalendar">Own local Calendar</string>
    <string name="calendar_synchronization_infoText">You have switched on the calendar synchronization.\n\nIn the next dialog, you can select the calendar to synchronize the lectures and changes, or use your own local calendar.\n\n(Recommended: Create a new calendar on the <a href="https://calendar.google.com/calendar/render?hl=de#main_7">Google calendar website</a> and choose this one in the next dialog.)\n\nPlease note the following:\n- Appointments remain when deleting the app (if you want to delete them, switch off the synchronization before deleting)\n- Appointments with notes will not be deleted\n- Holidays have not yet been considered</string>
    <string name="calendar_synchronization_chooseCalendar">Please choose a calendar</string>
    <string name="calendar_synchronization_permissionNotGranted">Permission for the calendar not granted</string>
    <string name="navigation">Bus &amp; Train schedule</string>
    <string name="raum" translatable="false">Room</string>
    <string name="zeit" translatable="false">Time</string>
    <string name="fach_dozent" translatable="false">Fach Dozent</string>
    <string translatable="false" name="PREF_KEY_CALENDAR_SYNCHRONIZATION">calendar_synchronization</string>
    <string translatable="false" name="PREF_KEY_CATEGORY_NOTIFICATION">category_notification</string>
    <string translatable="false" name="PREF_KEY_STUDIENGANG">studiengang</string>
    <string translatable="false" name="PREF_KEY_CHANGES_NOTIFICATION">changes_notifications</string>
    <string translatable="false" name="PREF_KEY_SEMESTER">semester</string>
    <string translatable="false" name="PREF_KEY_LOGIN">login</string>
    <string translatable="false" name="PREF_KEY_EXPERIMENTAL_FEATURES">experimental_features</string>
    <string translatable="false" name="PREF_KEY_MYSCHEDULE_DATE">myschedule_date</string>
    <string translatable="false" name="PREF_KEY_TERM_TIME">term_time</string>
    <string translatable="false" name="PREF_KEY_EXPERIMENTAL_FEATURES_ENABLED">experimental_features</string>
    <string translatable="false" name="PREF_KEY_SELECTED_CANTEEN">selected_canteen</string>
    <string translatable="false" name="PREF_KEY_MEAL_TARIFF">speiseplan_tarif</string>
    <string translatable="false" name="PREF_KEY_SHOW_PUSH_DIALOG">show_push_notifications_dialog</string>
    <string translatable="false" name="PREF_KEY_SHOW_EXPERIMENTAL_FEATURES_INFO">show_experimental_features_info</string>
    <string translatable="false" name="PREF_KEY_SCREEN_CALENDAR_SYNCHRONIZATION">pref_screen_calendar_synchronization</string>
    <string translatable="false" name="PREF_KEY_CALENDAR_REMINDER">calendar_reminder</string>
    <string translatable="false" name="PREF_KEY_MAIN_COURSE">speiseplan_hauptgericht</string>
    <string translatable="false" name="PREF_KEY_SIDE_DISHES">speiseplan_beilage</string>
    <string translatable="false" name="PREF_KEY_PASTA">speiseplan_pasta</string>
    <string translatable="false" name="PREF_KEY_DESSERTS">speiseplan_dessert</string>
    <string translatable="false" name="PREF_KEY_SALAD">speiseplan_salat</string>
    <string name="calendar_synchronization_successful">Schedule successfully synchronized with the calendar!</string>
    <string name="calendar_syncronization_keep_events_title">Keep Events?</string>
    <string name="calendar_syncronization_keep_events_message">Do you want to keep the events or the local calendar?</string>
    <string name="versionString">Version</string>
    <string name="MEAL_hausgemacht">home made</string>
    <string name="MEAL_Wild">Wild</string>
    <string name="MEAL_regional">regional</string>
    <string name="MEAL_Fisch">Fish</string>
    <string name="MEAL_Rind">Rind</string>
    <string name="MEAL_nachhaltigerFang">nachhaltiger Fang</string>
    <string name="MEAL_vegan">vegan</string>
    <string name="MEAL_Lamm">Lamb</string>
    <string name="continue_onboarding">Continue</string>
    <string name="onboarding_study">Assistant - Study</string>
    <string name="onboarding_menu_plan_info">Choose your menu plan</string>
    <string name="onboarding_notifications_info">Turn on notifications \n Receive Push Notifications of current changes</string>
    <string name="onboarding_restart">Restart Assistant</string>
</resources>