<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Lars Gaidzik & Lukas Mahr
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stundenplan"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/stundenplan" />

        <item
            android:id="@+id/nav_mySchedule"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/myschedule" />

        <item
            android:id="@+id/nav_aenderung"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/aenderung" />

    </group>



    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_speiseplan"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/speiseplan" />
    </group>

    <group
        android:id="@+id/menu_experimental"
        android:checkableBehavior="single"
        >
        <item
            android:title="@string/experimental"
            android:id="@+id/nav_experimental">
            <menu >
                <item
                    android:id="@+id/nav_notenbekanntgabe"
                    android:icon="@android:drawable/ic_lock_idle_low_battery"
                    android:checkable="true"
                    android:title="@string/notenbekanntgabe" />

                <item
                    android:id="@+id/nav_notenblatt"
                    android:icon="@android:drawable/ic_lock_idle_low_battery"
                    android:checkable="true"
                    android:title="@string/notenblatt" />
                <item
                    android:id="@+id/nav_raumsuche"
                    android:icon="@android:drawable/ic_lock_idle_low_battery"
                    android:checkable="true"
                    android:title="@string/raumsuche" />
            </menu>
        </item>

    </group>

    <group
    android:id="@+id/menu_bottom"
    android:checkableBehavior="single">
    <item
        android:id="@+id/nav_einstellungen"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/einstellungen" />
    </group>
    <group
        android:id="@+id/menu_impressum"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/aboutus" />
        <item
            android:id="@+id/nav_impressum"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/impressum" />
        <item
            android:id="@+id/nav_datenschutz"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/datenschutz" />
    </group>
</menu>