<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 Lars Gaidzik & Lukas Mahr
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/studium">

        <ListPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="WS"
            android:entries="@array/term_time"
            android:entryValues="@array/term_time_values"
            android:key="term_time"
            android:title="@string/term_time" />

        <ListPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="Sprachenprogramm"
            android:key="studiengang"
            android:title="@string/studiengang" />
        <ListPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="1"
            android:key="semester"
            android:title="@string/semester" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/speiseplan">
        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="true"
            android:key="speiseplan_hauptgericht"
            android:title="@string/hauptgerichte" />
        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="true"
            android:key="speiseplan_beilage"
            android:title="@string/beilagen" />
        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="true"
            android:key="speiseplan_pasta"
            android:title="@string/pasta" />
        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="true"
            android:key="speiseplan_dessert"
            android:title="@string/desserts" />
        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="true"
            android:key="speiseplan_salat"
            android:title="@string/salat" />
        <ListPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="1"
            android:entries="@array/speiseplan_tarife"
            android:entryValues="@array/speiseplan_tarife_values"
            android:key="speiseplan_tarif"
            android:title="@string/tariff" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:key="category_notification"
        android:title="@string/notifications">
        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="true"
            android:key="changes_notifications"
            android:title="@string/changes" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:key="category_experimental"
        android:title="@string/experimental">
        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:key="experimental_features"
            android:title="@string/experimental_features" />
        <Preference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="login"
            android:title="@string/LOGIN_DIALOG" />

        <!--<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="pref_screen_calendar_synchronization"
            android:title="@string/calendar_synchronization">-->

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="calendar_synchronization"
            android:title="@string/pref_screen_calendar_synchronization" />

        <!--</PreferenceScreen>-->

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:key="category_onboarding"
        android:title="@string/onboarding_study">
        <Preference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:key="onboarding_restart"
            android:title="@string/onboarding_restart" />

    </PreferenceCategory>

</PreferenceScreen>
