<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="@string/PREF_KEY_CALENDAR_SYNCHRONIZATION"
        android:title="@string/myschedule" />

    <PreferenceCategory
        android:title="Erinnerungen">

        <Preference
            android:key="@string/PREF_KEY_CALENDAR_REMINDER"
            android:defaultValue="@integer/CALENDAR_REMINDER_DEFAULT_VALUE"
            android:title="Erinnerung x Minuten vorher"
            android:summary="@integer/CALENDAR_REMINDER_DEFAULT_VALUE"/>

        <!--<Preference
            android:title="Erinnerung für erste Vorlesung um Uhrzeit am Tag davor" />-->

    </PreferenceCategory>

</PreferenceScreen>