<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/widget_list_item_schedule_time_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="7dp">

        <TextView
            android:id="@+id/widget_list_item_schedule_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/widget_list_item_schedule_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="80dp"
            android:text="@string/raum"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fach_dozent"
        android:id="@+id/widget_list_item_schedule_details"
        android:textColor="@android:color/black"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="7dp"
        android:layout_alignTop="@+id/widget_list_item_schedule_time_room"
        android:layout_toRightOf="@+id/widget_list_item_schedule_time_room"
        android:layout_toEndOf="@+id/widget_list_item_schedule_time_room" />

</RelativeLayout>
